<resources>
    <string name="app_name">AI Based Attendance System</string>
    <string name="enter_student_name">Enter student name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_parent_mobile_no">Enter parent mobile no</string>
    <string name="submit">Submit</string>
    <string name="enter_username">Enter username</string>
    <string name="add_student">Add Student</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="description">description</string>
    <string name="ai_is_everything">AI is everything</string>
    <string name="welcome_to_ai_based_attendence_app">Welcome to AI based Attendance App</string>
    <string name="student_name">Student Name</string>
    <string name="_1">1</string>
</resources>