<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idLLMainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/description"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/idETUsername"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/idETPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true" />

    <TextView
        android:id="@+id/idBtnSubmit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_primary"
        android:textSize="25sp"
        android:textStyle="bold" />
</LinearLayout>