<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/idLLAdminArea"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.AdminArea">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TVLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_logout_24" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/add_student"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/idETSUsername"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true" />


        <EditText
            android:id="@+id/idETSName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_student_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/idETSPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/idETSPMobNO"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_parent_mobile_no"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="10"
            android:padding="8dp"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/idBtnSubmit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="80dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/design_default_color_primary"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>