<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idLLMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".Activities.StudentArea">

    <RelativeLayout
        android:id="@+id/idRLLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idTVWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/idTVLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_logout_24"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottiefile"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/idRLLogout"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/lottie" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lottiefile"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/welcome_to_ai_based_attendence_app"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lottiefile"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/ai_is_everything"
        android:textColor="@android:color/black"
        android:textSize="14sp" />
</RelativeLayout>